--- a/templates/index.html
+++ b/templates/index.html
@@ -28,8 +28,8 @@
     <button onclick="getButton()">getButton</button>
     <button onclick="postButton()">postButton</button>
     <ul>
-        <li>github 풀리퀘스트 확인 : (팀원과 함께 먹고 싶은 움식? 괄호에 넣기)1</li>
-        <li>github 풀리퀘스트 확인 : (팀원과 함께 먹고 싶은 움식? 괄호에 넣기)1</li>
+        <li>github 풀리퀘스트 확인 : (팀원과 함께 먹고 싶은 움식? 괄호에 넣기)</li>
+        <li>github 풀리퀘스트 확인 : (팀원과 함께 먹고 싶은 움식? 괄호에 넣기)</li>
         <li>김희석 : ()</li>
         <li>이현경 : ()</li>
         <li>임수영 : ()</li>
