--- a/templates/index.html
+++ b/templates/index.html
@@ -29,10 +29,10 @@
     <button onclick="postButton()">postButton</button>
     <ul>
         <li>github 풀리퀘스트 확인 : (팀원과 함께 먹고 싶은 움식? 괄호에 넣기)</li>
-        <li>github 풀리퀘스트 확인 : (팀원과 함께 먹고 싶은 움식? 괄호에 넣기)</li>
         <li>김희석 : ()</li>
         <li>이현경 : ()</li>
         <li>임수영 : ()</li>
+        <li>이은비 : ()</li>
     </ul>
 </body>
 
