--- a/templates/index.html
+++ b/templates/index.html
@@ -28,12 +28,13 @@
     <button onclick="getButton()">getButton</button>
     <button onclick="postButton()">postButton</button>
     <ul>
-        <li>github 풀리퀘스트 확인 : (팀원과 함께 먹고 싶은 움식? 괄호에 넣기)</li>
+        <li>github 풀리퀘스트 확인 : (팀원과 함께 나누고 싶은 맛집? 괄호에 넣기)</li>
         <li>김희석 : ()</li>
         <li>이현경 : ()</li>
         <li>임수영 : ()</li>
         <li>이은비 : ()</li>
         <li>김장원 : ()</li>
+        <li>김장원 : (피자, 치킨)</li>
     </ul>
 </body>
 
