--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
         <li>이현경 : [][][]</li>
         <li>임수영 : [][][]</li>
         <li>이은비 : [][][]</li>
-        <li>김장원 : [피자][짜장][짬뽕]</li>
+        <li>김장원 : [][][]</li>
     </ul>
 </body>
 
