--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
+
+    * {
+        font-family: 'Noto Sans KR', sans-serif;
+    }
+</style>
 <script>
     function getButton() {
         fetch("/test").then(res => res.json()).then(data => {
@@ -37,5 +45,4 @@
 
     </ul>
 </body>
-
 </html>
