--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
         <li>이현경 : [][][]</li>
         <li>임수영 : [][][]</li>
         <li>이은비 : [][][]</li>
-        <li>김장원 : [][][]</li>
+        <li>김장원 : [a][][]</li>
 
     </ul>
 </body>
