김희석 먹고싶은 음식 변경

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
     <button onclick="postButton()">postButton</button>
     <ul>
         <li>github 풀리퀘스트 확인 : (팀원과 함께 먹고 싶은 음식 3가지? []에 넣기)</li>
-        <li>김희석 : [][][]</li>
+        <li>김희석 : [고][구][마]</li>
         <li>이현경 : [][][]</li>
         <li>임수영 : [][][]</li>
         <li>이은비 : [][][]</li>
