--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
         <li>김희석 : [][][]</li>
         <li>이현경 : [][][]</li>
         <li>임수영 : [][][]</li>
-        <li>이은비 : [햄버거][치킨][]</li>
+        <li>이은비 : [햄버거][치킨][콜라]</li>
         <li>김장원 : [][][]</li>
 
     </ul>
