--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
         <li>github 풀리퀘스트 확인 : (팀원과 함께 먹고 싶은 음식 3가지? []에 넣기)</li>
         <li>김희석 : [][][]</li>
         <li>이현경 : [][][]</li>
-        <li>임수영 : [][][]</li>
+        <li>임수영 : [1][2][3]</li>
         <li>이은비 : [][][]</li>
         <li>김장원 : [][][]</li>
 
