--- a/templates/index.html
+++ b/templates/index.html
@@ -16,33 +16,98 @@
     }
 </style>
 <script>
-    function getButton() {
-        fetch("/test").then(res => res.json()).then(data => {
-            alert(data['msg'])
-        })
-    }
+    $(document).ready(function () {
+        show_comment();
+      });
+      
+      function save_comment() {
+        let name = $('#name').val()
+        let comment = $('#comment').val()
 
-    function postButton() {
         let formData = new FormData();
-        formData.append("title_give", "블랙팬서");
+        formData.append("name_give", name);
+        formData.append("comment_give", comment);
 
-        fetch("/test", { method: "POST", body: formData }).then(res => res.json()).then(data => {
-            alert(data['msg'])
-        })
-    }
+        fetch('/guestbook', {method: "POST",body: formData,}).then((res) => res.json()).then((data) => {
+            alert(data["msg"]);
+            window.location.reload()
+          });
+      }
+      function show_comment() {
+        fetch('/guestbook').then((res) => res.json()).then((data) => {
+            let rows = data['result']
+            $('#comment-list').empty()
+            rows.forEach((a)=>{
+                let name = a['name']
+                let comment = a['comment']
+                let temp_html = `<div class="card">
+                              <div class="card-body">
+                                <blockquote class="blockquote mb-0">
+                                  <p>${comment}</p>
+                                  <footer class="blockquote-footer">${name}</footer>
+                                </blockquote>
+                              </div>
+                            </div>`
+                $('#comment-list').append(temp_html)
+            })
+            
+
+        
+				})
+      }
 </script>
 
 <body>
-    <button onclick="getButton()">getButton</button>
-    <button onclick="postButton()">postButton</button>
-    <ul>
-        <li>github 풀리퀘스트 확인 : (팀원과 함께 먹고 싶은 음식 3가지? []에 넣기)</li>
-        <li>김희석 : [고][구][마]</li>
-        <li>이현경 : [][][]</li>
-        <li>임수영 : [][][]</li>
-        <li>이은비 : [][][]</li>
-        <li>김장원 : [][][]</li>
+    
 
-    </ul>
+
+
+
+
+    <div class="mypic">
+        <h1>GUEST BOOK</h1>
+      </div>
+      <div class="mypost">
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control" id="name" placeholder="닉네임" />
+        </div>
+        <div class="form-floating">
+          <textarea
+            class="form-control"
+            placeholder="방명록을 작성하세요"
+            id="comment"
+            style="height: 100px"
+          ></textarea>
+        </div>
+        <button onclick="save_comment()" type="button" class="btn btn-dark">
+          댓글 남기기
+        </button>
+      </div>
+      <div class="mycards" id="comment-list">
+        <div class="card">
+          <div class="card-body">
+            <blockquote class="blockquote mb-0">
+              <p>새로운 앨범 너무 멋져요!</p>
+              <footer class="blockquote-footer">호빵맨</footer>
+            </blockquote>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <blockquote class="blockquote mb-0">
+              <p>새로운 앨범 너무 멋져요!</p>
+              <footer class="blockquote-footer">호빵맨</footer>
+            </blockquote>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <blockquote class="blockquote mb-0">
+              <p>새로운 앨범 너무 멋져요!</p>
+              <footer class="blockquote-footer">호빵맨</footer>
+            </blockquote>
+          </div>
+        </div>
+      </div>
 </body>
 </html>
