--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,10 @@
             </div>
     </div>
 </div>
-
+<!-- 테스트용 -->
+<div>
+    <button onclick="location.href='/myprofile/new'">상세페이지</button>
+</div>
 </body>
 
 </html>
