--- a/templates/sub.html
+++ b/templates/sub.html
@@ -1,12 +1,262 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&display=swap" rel="stylesheet" />
+
+    <title>상세페이지</title>
+
+<style>
+    ::selection {
+        user-select : none
+        /* 드래그 못하게 */
+    }
+
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background-color: #2f3542;
+        border-radius: 10px;
+        background-clip: padding-box;
+        border: 2px solid transparent;
+    }
+
+    .container::-webkit-scrollbar-track {
+        background-color: grey;
+        border-radius: 10px;
+        box-shadow: inset 0px 0px 5px white;
+    }
+
+    .imoge {
+        position: absolute;
+        width: 65px;
+        height: 57px;
+        left: 154px;
+        top: 53px;
+
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 70px;
+        line-height: 85px;
+        /* background-color: red; */
+        text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.34);
+    }
+
+    .photo {
+        background-image: url('https://ibb.co/GWq3MHz');
+        box-sizing: border-box;
+        position: absolute;
+        width: 321px;
+        height: 307px;
+        left: 154px;
+        top: 165px;
+
+        box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.25);
+        border-radius: 50px;
+        background-image: url('https://i.ibb.co/HtjpPh5/Frame-1.png');
+        background-repeat: no-repeat;
+        background-position: center;
+        
+
+    }
+
+    .name {
+        background-color: transparent;
+        position: absolute;
+        width: 345px;
+        height: 118px;
+        left: 550px;
+        top: 208px;
+        font-family: 'Inter';
+        font-weight: 600;
+        font-size: 80px;
+        line-height: 116px;
+    }
+
+    .about_me_text {
+        background-color: transparent;
+        position: absolute;
+        width: 345px;
+        height: 118px;
+        left: 560px;
+        top: 305px;
+        font-size: 30px;
+        font-family: 'Inter';
+    }
+
+    #tmi_area {
+        position: absolute;
+        width: 1133px;
+        height: 348px;
+        left: 154px;
+        top: 542px;
+
+        background-color: #D9D9D9;
+        box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.25);
+        border-radius: 80px;
+    }
+
+    .profile {
+        background-color: transparent;
+        position: absolute;
+        left: 80px;
+
+        font-family: 'Inter';
+        font-weight: 600;
+        font-size: 60px;
+        line-height: 116px;
+        color: #000000;
+    }
+
+    .text {
+        background-color: transparent;
+        position: absolute;
+        left: 80px;
+        top: 100px;
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 25px;
+    }
+
+    .text:hover {
+        outline: none;
+        cursor: pointer
+    }
+
+    summary::marker {
+        content: "+ ";
+        font-family: monospace;
+    }
+
+    details[open] summary::marker {
+        content: "- ";
+    }
+
+    .button {
+        border: none;
+        position: absolute;
+
+        width: 219px;
+        height: 72px;
+        left: 1068px;
+        top: 914px;
+        background: #D9D9D9;
+        box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.25);
+        border-radius: 50px;
+        font-family: 'Inter';
+        font-style: normal;
+        font-size: 25px;
+    }
+
+    .button:hover {
+        background: #c6c6c6;
+    }
+
+    .button:active {
+        transform: scale(0.95);
+    }
+</style>
+
+<script>
+    window.addEventListener('DOMContentLoaded', function () {
+        document.querySelectorAll('details').forEach(function (item) {
+            item.addEventListener("toggle", event => {
+                let toggled = event.target;
+                if (toggled.attributes.open) {
+                    document.querySelectorAll('details[open]').forEach(function (opened) {
+                        if (toggled != opened)
+                            opened.removeAttribute('open');
+                    });
+                }
+            })
+        });
+    });
+
+    $(document).ready(function () {
+        show_bucket();
+    });
+    function show_bucket() {
+        fetch('/bucket').then(res => res.json()).then(data => {
+            let rows = data['result']
+            $('#bucket-list').empty()
+            rows.forEach((a) => {
+                let bucket = a['bucket']
+                let temp_html = `<li>
+                                <h2>✅ ${bucket}</h2>
+                                </li>`
+                $('#bucket-list').append(temp_html)
+            })
+        })
+    }
+
+    function save_bucket() {
+        let bucket = $("#bucket").val();
+
+        let formData = new FormData();
+        formData.append("bucket_give", bucket);
+
+        fetch('/bucket', { method: "POST", body: formData, }).then((res) => res.json()).then((data) => {
+            alert(data["msg"]);
+            window.location.reload();
+        });
+    }
+
+</script>
+
 </head>
-<body>
-    
+    <div class="container">
+        <div>
+            <text class="imoge">🐶</text>
+        </div>
+        <div class="photo"></div>
+        <div>
+            <text class="name">이름</text>
+        </div>
+        <div>
+            <text class="about_me_text">자기소개 내용</text>
+        </div>
+
+        <div id="tmi_area">
+            <text class="profile">
+                Profile
+            </text>
+            <div class="text">
+                <details>
+                    <summary>사용할 수 있는 언어</summary>
+                    <p>내부에 넣을 내용을 입력해주세요</p>
+                </details>
+
+                <details>
+                    <summary>자신의 장점</summary>
+                    <p>내부에 넣을 내용을 입력해주세요</p>
+                </details>
+
+                <details>
+                    <summary>MBTI</summary>
+                    <p>내부에 넣을 내용을 입력해주세요</p>
+                </details>
+
+                <details>
+                    <summary>TMI</summary>
+                    <p>내부에 넣을 내용을 입력해주세요</p>
+                </details>
+            </div>
+        </div>
+        <button type="button" onclick="location.href='http://localhost:5000/' " class="button">돌아가기</button>
+    </div>
 </body>
-</html>
