--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
             justify-content: center;
             
             background-color: aqua;
-            background-image: url('/static/image/benner_back.png');
+            background-image: url('/static/image/background2');
             width: 1280px;
             height: 300px;
 
