각각 구역수정

--- a/templates/index.html
+++ b/templates/index.html
@@ -89,14 +89,14 @@
         }
 
         /* 여기까지 김장원  */
-        /* 이은비 */
+        /* 아래는 이은비 */
 
         #team {
             height: 300px;
             margin : 20px;
         }
 
-        /* 이은비 */
+        /* 여기까지는 이은비 */
 
         /* 아래는 이현경님 */
 
@@ -120,6 +120,11 @@
         .click_img {
             border-radius: 100%
         }
+        /* 아래는 김희석님 : guset book*/
+
+
+        /* 여기까지 김희석님  */
+
     </style>
     <script type="text/javascript">
         function profile() {
