--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
             font-size: 80px;
             font-weight: bold;
             font-family: 'Alfa Slab One', cursive;
-            letter-spacing : 6px;
+            letter-spacing: 6px;
 
             color: white;
             text-shadow: -1px 0 #000, 0 2.5px #000, 1.5px 0 #000, 0 -1px #000;
@@ -90,10 +90,38 @@
 
         /* 여기까지 김장원  */
         /* 아래는 이은비 */
+        .teamtitle {
+            text-align: center;
+        }
 
-        #team {
-            height: 300px;
-            margin : 20px;
+        .team-body {
+            background-color: grey;
+            width: 300px;
+            height: 100px;
+            margin: 20px auto 80px auto;
+        }
+
+        .card-header {
+            font-size: x-large;
+            text-align: center;
+        }
+
+        .card-text {
+            text-align: center;
+        }
+
+        .team-text {
+            margin: 20px auto 20px auto;
+        }
+
+        .card-title {
+            color: white;
+            text-align: center;
+            background-color: dimgrey;
+        }
+
+        .teamintro {
+            margin-bottom: 50px;
         }
 
         /* 여기까지는 이은비 */
@@ -120,11 +148,11 @@
         .click_img {
             border-radius: 100%
         }
+
         /* 아래는 김희석님 : guset book*/
 
 
         /* 여기까지 김희석님  */
-
     </style>
     <script type="text/javascript">
         function profile() {
@@ -177,9 +205,49 @@
                 <li>Guest Book</li>
             </ol>
         </div>
-        <div id = "team">
-            <h1>팀소개</h1>
 
+        <div class="teamtitle">
+            <h2>팀 소개</h2>
+        </div>
+        <div class="teamintro" style="align-items: center">
+            <div class="card-header">안녕하세요!</div>
+            <div class="card-body">
+                <h5 class="card-text">저희는 외향인 1명과 내향인 4명으로 구성된 E1I4 입니다!</h5>
+            </div>
+        </div>
+        <div class="teaminfo">
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">TMI / 우리팀의 특징</h5>
+                            <img src="Frame 6.png" class="card-img-top" alt="...">
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">궁극적인 목표</h5>
+                            <P></P>
+                            <p class="card-text">✔ 내일배움캠프 다함께 수료</p>
+                            <p class="card-text"> ✔ 멋진 개발자 되기!!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">우리팀의 규칙</h5>
+                            <P></P>
+                            <p class="card-text">✔ 8시 50분까지는 꼭! 접속해서 그 날 공부내용 체크</p>
+                            <p class="card-text"> ✔ 막히는 부분이 있다면 혼자 머리싸매지 말고 팀원과 같이 해결!</p>
+                            <p class="card-text"> ✔ 13-14시 점심 시간, 19-20시 저녁 시간</p>
+                            <p class="card-text"> ✔ 20시 30분 Git Merge 후 피드백하기</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
 
