--- a/templates/index.html
+++ b/templates/index.html
@@ -1,48 +1,120 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+
+    <title>Member</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+
+    <style>
+    .title{
+        padding: 30px;
+    }
+    .name{
+        margin: auto;
+        padding-left: 70px;
+        padding-right: 70px;
+    }
+    .card {
+        border-color: white;
+    }
+    .img{
+        width : 250px;
+        height : 250px;
+        border-radius : 100%;
+        margin-left: 70px;
+        margin-right: 70px;
+    }
+    </style>
+
+    <!-- script
+        $(document).ready(function() {
+            show_member();
+        })
+        function show_member() {
+            fetch('/member').then((res) => res.json()).then((data) => {
+                console.log(data)
+                alert(data['msg'])
+            })
+        }
+    /script    -->
+
 </head>
 
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
-
-    * {
-        font-family: 'Noto Sans KR', sans-serif;
-    }
-</style>
-<script>
-    function getButton() {
-        fetch("/test").then(res => res.json()).then(data => {
-            alert(data['msg'])
-        })
-    }
-
-    function postButton() {
-        let formData = new FormData();
-        formData.append("title_give", "블랙팬서");
-
-        fetch("/test", { method: "POST", body: formData }).then(res => res.json()).then(data => {
-            alert(data['msg'])
-        })
-    }
-</script>
-
 <body>
-    <button onclick="getButton()">getButton</button>
-    <button onclick="postButton()">postButton</button>
-    <ul>
-        <li>github 풀리퀘스트 확인 : (팀원과 함께 먹고 싶은 음식 3가지? []에 넣기)</li>
-        <li>김희석 : [][][]</li>
-        <li>이현경 : [][][]</li>
-        <li>임수영 : [][][]</li>
-        <li>이은비 : [][][]</li>
-        <li>김장원 : [][][]</li>
+    <div class="title">
+        <h2>MEMBER</h2>
+    </div>
+    <div class="member">
+        <div class="row row-cols-1 row-cols-md-5 g-2">
+            <div class="col">
+                <div class="card h-100">
+                    <a href="default.asp">
+                        <img src="https://ca.slack-edge.com/T043597JK8V-U053UK80VR8-cbc4d9e1783b-512" class="img">
+                      </a>
+                      <br>
+                    <div class="name">
+                        <h3>김희석</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <a href="default.asp">
+                        <img src="https://ca.slack-edge.com/T043597JK8V-U051WD9LCNP-45ff45329ac6-512" class="img">
+                      </a>
+                      <br>
+                    <div class="name">
+                        <h3>이은비</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <a href="default.asp">
+                        <img src="https://ca.slack-edge.com/T043597JK8V-U0532LT9LLE-58e265f5a665-512" class="img">
+                      </a>
+                      <br>
+                    <div class="name">
+                        <h3>이현경</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <a href="default.asp">
+                        <img src="https://ca.slack-edge.com/T043597JK8V-U052A5UUG06-fd387358fc87-512" class="img">
+                      </a>
+                      <br>
+                    <div class="name">
+                        <h3>김장원</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <a href="default.asp">
+                        <img src="https://ca.slack-edge.com/T043597JK8V-U053QSM8MT4-e435cca492ea-512" class="img">
+                      </a>
+                      <br>
+                    <div class="name">
+                        <h3>임수영</h3>
+                    </div>
+                </div>
+            </div>
+    </div>
+</div>
 
-    </ul>
 </body>
+
 </html>
