--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Document</title>
 </head>
+
 
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
@@ -43,8 +45,12 @@
                 let temp_html = `<div class="card">
                               <div class="card-body">
                                 <blockquote class="blockquote mb-0">
+                                  <div style="width:100px; height:70px; border:1px solid grey; float:left;">
                                   <p>${comment}</p>
+                                  </div>
+                                  <div style="width:150px; height:70px; border:1px solid blue; float:right;">
                                   <footer class="blockquote-footer">${name}</footer>
+                                  </div>
                                 </blockquote>
                               </div>
                             </div>`
