--- a/templates/index.html
+++ b/templates/index.html
@@ -46,9 +46,9 @@
                               <div class="card-body">
                                 <blockquote class="blockquote mb-0">
                                   <div style="width:100px; height:70px; border:1px solid grey; float:left;">
-                                  <p>${comment}</p>
+                                  ${comment}
                                   </div>
-                                  <div style="width:150px; height:70px; border:1px solid blue; float:right;">
+                                  <div style="width:150px; height:70px; border:1px solid grey; float:right;">
                                   <footer class="blockquote-footer">${name}</footer>
                                   </div>
                                 </blockquote>
