--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,22 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-
-    <title>Member</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+
+    <title>Member</title>
 
     <style>
         .wrap {
@@ -129,13 +132,9 @@
             padding: 30px;
         }
 
-        .member {
-            padding-left: 80px;
-            padding-right: 80px;
-        }
-
         .name {
             margin: auto;
+
         }
 
         .card {
@@ -143,7 +142,10 @@
         }
 
         .click_img {
-            border-radius: 100%
+            width: 200px;
+            height: 200px;
+            border-radius: 100%;
+
         }
 
         /* 아래는 김희석님 : guset book*/
@@ -176,6 +178,7 @@
             })
         }
     </script>
+</head>
 
 <body>
     <div class="wrap">
@@ -196,7 +199,7 @@
         </div>
         <div id="nav">
             <ol>
-                <li>E1I4 INTRO</li>
+                <li>E1I4 Intro</li>
                 <li>Member</li>
                 <li>Design_Empty</li>
                 <li>Guest Book</li>
@@ -218,7 +221,7 @@
                     <div class="card h-100">
                         <div class="card-body">
                             <h5 class="card-title">TMI / 우리팀의 특징</h5>
-                            <img src="Frame 6.png" class="card-img-top" alt="...">
+                            <img src="/static/image/Frame 6.png" class="card-img-top" alt="...">
                         </div>
                     </div>
                 </div>
@@ -255,8 +258,7 @@
             <div class="row row-cols-1 row-cols-md-5 g-2">
                 <div class="col">
                     <div class="card h-100">
-                        <img src="https://ca.slack-edge.com/T043597JK8V-U053UK80VR8-cbc4d9e1783b-512" class="click_img"
-                            alt="..." onclick="profile()">
+                        <img src="https://ca.slack-edge.com/T043597JK8V-U053UK80VR8-cbc4d9e1783b-512" class="click_img" alt="...">
                         <div class="name">
                             <h3>김희석</h3>
                         </div>
@@ -264,8 +266,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="https://ca.slack-edge.com/T043597JK8V-U051WD9LCNP-45ff45329ac6-512" class="click_img"
-                            alt="..." onclick="profile()">
+                        <img src="https://ca.slack-edge.com/T043597JK8V-U051WD9LCNP-45ff45329ac6-512" class="click_img alt=" ..." onclick="profile()">
                         <div class="name">
                             <h3>이은비</h3>
                         </div>
@@ -273,8 +274,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="https://ca.slack-edge.com/T043597JK8V-U0532LT9LLE-58e265f5a665-512" class="click_img"
-                            alt="..." onclick="profile()">
+                        <img src="https://ca.slack-edge.com/T043597JK8V-U0532LT9LLE-58e265f5a665-512" class="click_img" alt="..." onclick="profile()">
                         <div class="name">
                             <h3>이현경</h3>
                         </div>
@@ -282,8 +282,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="https://ca.slack-edge.com/T043597JK8V-U052A5UUG06-fd387358fc87-512" class="click_img"
-                            alt="..." onclick="profile()">
+                        <img src="https://ca.slack-edge.com/T043597JK8V-U052A5UUG06-fd387358fc87-512" class="click_img" alt="..." onclick="profile()">
                         <div class="name">
                             <h3>김장원</h3>
                         </div>
@@ -291,8 +290,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="https://ca.slack-edge.com/T043597JK8V-U053QSM8MT4-e435cca492ea-512" class="click_img"
-                            alt="..." onclick="profile()">
+                        <img src="https://ca.slack-edge.com/T043597JK8V-U053QSM8MT4-e435cca492ea-512" class="click_img" alt="..." onclick="profile()">
                         <div class="name">
                             <h3>임수영</h3>
                         </div>
@@ -306,5 +304,4 @@
         </div>
     </div>
 </body>
-
 </html>
