--- a/templates/index.html
+++ b/templates/index.html
@@ -250,8 +250,9 @@
                 </div>
                 <div>
                     <h1>
-                        <p> &nbsp;</p>
+                        <p> &nbsp&nbsp;</p>
                     </h1>
+
                 </div>
             </div>
         </div>
