잘못들어간큰 따옴표 삭제

--- a/templates/index.html
+++ b/templates/index.html
@@ -331,7 +331,7 @@
                 <div class="col">
                     <div class="card h-100">
                         <img src="https://ca.slack-edge.com/T043597JK8V-U051WD9LCNP-45ff45329ac6-512"
-                            class="click_img alt=" ..." onclick="profile()">
+                            class="click_img alt=" ... onclick="profile()">
                         <div class="name">
                             <h3>이은비</h3>
                         </div>
